@@ -8,28 +8,13 @@ if ($mm_ver =~ /_/) {
     die $@ if $@;
 }
 
-$PACKAGE = 'Exporter::Lite';
-($PACKAGE_FILE = $PACKAGE) =~ s|::|/|g;
-$LAST_API_CHANGE = 0;
-
-eval "require $PACKAGE";
-
-unless ($@) { # Make sure we did find the module.
-    print <<"CHANGE_WARN" if ${$PACKAGE.'::VERSION'} < $LAST_API_CHANGE;
-
-NOTE: There have been API changes between this version and any older
-than version $LAST_API_CHANGE!  Please read the Changes file if you
-are upgrading from a version older than $LAST_API_CHANGE.
-
-CHANGE_WARN
-}
-
 WriteMakefile(
-    NAME            => $PACKAGE,
-    VERSION_FROM    => "lib/$PACKAGE_FILE.pm", # finds $VERSION
+    NAME            => 'Exporter::Lite',
+    VERSION_FROM    => "lib/Exporter/Lite.pm",
     PREREQ_PM       => {
         'strict'   => 0,
         'warnings' => 0,
+        'Carp'     => 0,
     },
 
     ($mm_ver >= 6.64
@@ -73,28 +58,3 @@ WriteMakefile(
 
 );
 
-
-{
-    package MY;
-
-    sub test_via_harness {
-        my($self, $orig_perl, $tests) = @_;
-
-        my @perls = ($orig_perl);
-        push @perls, qw(bleadperl 
-                        perl5.6.1
-                        perl5.6.0
-                        perl5.005_03 
-                        perl5.004_05 
-                        perl5.004_04
-                        perl5.004)
-          if $ENV{PERL_TEST_ALL};
-
-        my $out;
-        foreach my $perl (@perls) {
-            $out .= $self->SUPER::test_via_harness($perl, $tests);
-        }
-
-        return $out;
-    }
-}
